infra/k8s/08-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: user-service
          image: ghcr.io/nikhilsaravade/ms-code-execution-platform/user-service:latest
          volumeMounts:
            - name: postgres-ca-cert
              mountPath: /certs/postgres-ca.crt
              subPath: postgres-ca.crt
              readOnly: true
          ports:
            - name: http
              containerPort: 8081
            - name: grpc
              containerPort: 9090
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 5
          resources:
            requests:
              cpu: "50m"
              memory: "320Mi"
            limits:
              cpu: "500m"
              memory: "400Mi"
      volumes:
        - name: postgres-ca-cert
          configMap:
            name: postgres-ca-cert
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: platform
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
    - name: grpc
      port: 9090
      targetPort: 9090
