infra/k8s/10-problem-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: problem-service
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: problem-service
  template:
    metadata:
      labels:
        app: problem-service
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: problem-service
          image: ghcr.io/nikhilsaravade/ms-code-execution-platform/problem-service:latest
          volumeMounts:
            - name: postgres-ca-cert
              mountPath: /certs/postgres-ca.crt
              subPath: postgres-ca.crt
              readOnly: true
          ports:
            - name: http
              containerPort: 8082
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 5
          resources:
            requests:
              cpu: "150m"
              memory: "450Mi"
            limits:
              cpu: "750m"
              memory: "576Mi"
      volumes:
        - name: postgres-ca-cert
          configMap:
            name: postgres-ca-cert
---
apiVersion: v1
kind: Service
metadata:
  name: problem-service
  namespace: platform
spec:
  selector:
    app: problem-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
