infra/k8s/13-execution-result-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: execution-result-service
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: execution-result-service
  template:
    metadata:
      labels:
        app: execution-result-service
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: execution-result-service
          image: ghcr.io/nikhilsaravade/ms-code-execution-platform/execution-result-service:latest
          volumeMounts:
            - name: postgres-ca-cert
              mountPath: /certs/postgres-ca.crt
              subPath: postgres-ca.crt
              readOnly: true
            - name: kafka-ca-cert
              mountPath: /certs/ca.crt
              subPath: ca.crt
              readOnly: true
          ports:
            - name: http
              containerPort: 8085
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 5
          resources:
            requests:
              cpu: "50m"
              memory: "320Mi"
            limits:
              cpu: "500m"
              memory: "400Mi"
      volumes:
        - name: postgres-ca-cert
          configMap:
            name: postgres-ca-cert
        - name: kafka-ca-cert
          configMap:
            name: kafka-ca-cert
---
apiVersion: v1
kind: Service
metadata:
  name: execution-result-service
  namespace: platform
spec:
  selector:
    app: execution-result-service
  ports:
    - name: http
      port: 8085
      targetPort: 8085
